# migrate-agent

./: README.md  pyproject.toml
migrate_agent/: __init__.py  agent.py  cli.py  differ.py
